--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <!-- <script language="javascript" src="libraries/p5.sound.js"></script> -->
     <script language="javascript" type="text/javascript" src="scripts/sketch.js"></script>
     <script language="javascript" type="text/javascript" src="scripts/socket.js"></script>
+    <script language="javascript" type="text/javascript" src="scripts/rocket.js"></script>
     <!-- use style.css as sytlesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- import socket.io clientside -->
